fix jmh test and add html report